# ros_tutorial

./: .gitignore  frames_2026-02-22_16.39.41.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ur/share/ament_index/resource_index/parent_prefix_path/: ur
install/ur/share/ur/: local_setup.sh  package.sh
install/ur3e_basics/lib/ur3e_basics/: joint_commander  joint_listener
install/ur3e_basics/share/ur3e_basics/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_bringup/share/ur_bringup/: local_setup.sh  package.sh
install/ur_calibration/share/ament_index/resource_index/parent_prefix_path/: ur_calibration
install/ur_calibration/share/ur_calibration/: package.sh
install/ur_calibration/share/ur_calibration/cmake/: ur_calibrationConfig.cmake
install/ur_controllers/share/ur_controllers/: package.sh
install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.sh  package.sh
install/ur_moveit_config/local/lib/python3.10/dist-packages/ur_moveit_config-2.12.0-py3.10.egg-info/: PKG-INFO
install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.sh
install/ur_robot_driver/lib/ur_robot_driver/: ur_ros2_control_node
install/ur_robot_driver/local/lib/python3.10/dist-packages/ur_robot_driver-2.12.0-py3.10.egg-info/: PKG-INFO
install/ur_robot_driver/share/ament_index/resource_index/parent_prefix_path/: ur_robot_driver
install/ur_robot_driver/share/ur_robot_driver/: package.sh
install/ur_robot_driver/share/ur_robot_driver/cmake/: ur_robot_driverConfig.cmake
log/: latest_build
src/ur3e_basics/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ur3e_basics/action/: PickPlace.action
src/ur3e_basics/config/: robot_params.yaml
src/ur3e_basics/launch/: demo.launch.py  detection_demo.launch.py  full_detection_demo.launch.py  tf_demo.launch.py
src/ur3e_basics/msg/: Detection.msg
src/ur3e_basics/ur3e_basics/: detection_filter.py  detection_publisher.py  detection_transformer.py  joint_commander.py  joint_listener.py  pick_place_server.py  rotating_platform_tf.py  static_camera_tf.py  tf_listener.py
